--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -42,7 +42,7 @@ h1 {
     float: left;
     text-align: center;
     width: 49%;
-    padding-bottom: 5%;
+    padding: 4% 0 4% 0;
 }
 
 .vente {
@@ -50,7 +50,7 @@ h1 {
     float: right;
     text-align: center;
     width: 49%;
-    padding-bottom: 5%;
+    padding: 4% 0 4% 0;
 }
 
 /* Footer */
