--- a/front-end/css/style-home.css
+++ b/front-end/css/style-home.css
@@ -58,9 +58,9 @@ footer {
     background-color: #5d7052;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
+    margin: 280px 0 auto;
+    padding: 25px 0;
+    position: static;
     width: 100%;
 }
 
