update style for article

--- a/front-end/css/style-article.css
+++ b/front-end/css/style-article.css
@@ -49,42 +49,42 @@ h1 {
 }
 
 .place1 {
-    background-color: #383bf0;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
 }
 
 .place2 {
-    background-color: #00e900;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
 }
 
 .place3 {
-    background-color: #ff5454;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
 }
 
 .place4 {
-    background-color: #c3d102;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
 }
 
 .place5 {
-    background-color: #817c80;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
 }
 
 .place6 {
-    background-color: #0cb49e;
+    background-color: #ffffff;
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
