--- a/front-end/css/style-contact.css
+++ b/front-end/css/style-contact.css
@@ -42,16 +42,17 @@ h1 {
     padding: 90px;
 }
 
-
 /* Footer */
 footer {
     background-color: #5d7052;
     color: #fff;
     text-align: center;
-    margin: 10px 0;
-    padding: 10px 0;
-    position: static;
+    padding: 20px auto;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-icons {
