--- a/front-end/css/style-home.css
+++ b/front-end/css/style-home.css
@@ -58,10 +58,12 @@ footer {
     background-color: #5d7052;
     color: #fff;
     text-align: center;
-    margin: 280px 0 auto;
-    padding: 25px 0;
-    position: static;
+    padding: 20px auto;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-icons {
