--- a/front-end/css/style-login.css
+++ b/front-end/css/style-login.css
@@ -70,10 +70,12 @@ footer {
     background-color: #5d7052;
     color: #fff;
     text-align: center;
-    margin: 400px 0 auto;
-    padding: 20px 0;
-    position: absolute;
+    padding: 20px auto;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-icons {
