--- a/front-end/css/style-vendre.css
+++ b/front-end/css/style-vendre.css
@@ -2,6 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
+    position: relative;
     margin: 0;
     padding: 0;
 }
@@ -113,10 +114,12 @@ footer {
     background-color: #5d7052;
     color: #fff;
     text-align: center;
-    margin: 10px 0;
-    padding: 10px 0;
-    position: static;
+    padding: 20px auto;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-icons {
