--- a/front-end/css/style-article.css
+++ b/front-end/css/style-article.css
@@ -97,7 +97,7 @@ footer {
     text-align: center;
     margin: 10px 0;
     padding: 10px 0;
-    position: static;
+    position: absolute;
     width: 100%;
 }
 
