--- a/front-end/css/style-vendre.css
+++ b/front-end/css/style-vendre.css
@@ -115,7 +115,7 @@ footer {
     text-align: center;
     margin: 10px 0;
     padding: 10px 0;
-    position: static;
+    position: absolute;
     width: 100%;
 }
 
