--- a/front-end/css/style-scolaire.css
+++ b/front-end/css/style-scolaire.css
@@ -53,6 +53,7 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .place2 {
@@ -60,6 +61,7 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .place3 {
@@ -67,6 +69,7 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .place4 {
@@ -74,6 +77,7 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .place5 {
@@ -81,6 +85,7 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .place6 {
@@ -88,11 +93,12 @@ h1 {
     padding: 80px 10px 80px 10px;
     margin: 10px 10px;
     flex: 45%;
+    font-size: 40px;
 }
 
 .button1, .button2 {
     background-color: #f0be86;
-    padding: 10px 0 10px 10px;
+    padding: 10px 0 10px 0;
     width: 100%;
 }
 
